tests/snapshots/examples_fixtures/type_system__failing__01_compile_type_mismatch.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/01_compile_type_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `add`.

  examples/type_system/failing/01_compile_type_mismatch.flx:38:5
   |
33 | fn add(a: Int, b: Int) -> Int {
   | ----------------------------- `add` expects `Int` as the 1st parameter
34 |     a + b
35 | }
36 | 
37 | 
38 | add("x", 2)
   |     ^^^
   |     --- this argument has type `String`

Note:
  expected argument type: Int
  found argument type: String
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  Pass a `Int` value as the 1st argument.
== stdout ==
<not executed>
